# supply-chain-analysis

./: .env.example  .gitignore  README.md  fix-mtimes.ps1
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/analysis/: __init__.py  algorithms.py  graph_loader.py  kpis.py
backend/app/api/: algorithms.py  analysis_meta.py  csv_upload.py  cypher_exec.py  graph.py  health.py  ml.py  operations.py  optimization.py  simulation.py
backend/app/db/: __init__.py  neo4j_client.py
backend/app/db/queries/: __init__.py  graph_queries.py
backend/app/ml/: __init__.py  features.py  predict.py  train.py
backend/app/optimization/: __init__.py  data_loader.py  solver.py  writeback.py
backend/app/simulation/: __init__.py  engine.py  scenarios.py
cypher/: 00_constraints.cypher  q01_traceability.cypher  q02_supplier_impact.cypher  q03_orders_no_inventory.cypher  q04_routes_supplier_warehouse.cypher  q05_alternative_suppliers.cypher  q06_warehouses_with_inventory.cypher  q07_critical_dependencies.cypher  q08_blocked_route_impact.cypher  q09_unfulfillable_orders.cypher  q10_full_chain.cypher
data/: README.md  disruption_seeds.json  nodes.json  relationships.json
docs/: algorithms.md  architecture.md  data_model.md  demo_script.md  ml_model.md  optimization_formulation.md  rubric.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
scripts/: check_connection.py  diagnose_connection.py  export_csv.py  generate_dataset.py  seed_graph.py  (+7 more)
(+53 files in other folders)
