[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-neo4j-backend"
version = "0.1.0"
description = "FastAPI backend for supply-chain graph analysis and optimization"
requires-python = ">=3.11"
authors = [{ name = "Supply Chain Project Team" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "neo4j>=5.26.0",
    "python-dotenv>=1.0.1",
    "certifi>=2024.8.30",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.2",
    "joblib>=1.4.2",
    "faker>=30.8.0",
    "httpx>=0.27.2",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
